Add route for user history